fix bug, add comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +10,18 @@
 
 <body>
 	<div class="container">
-		<div class="container_bin" id="macro">
-			<div class="title">Девайсы макроса</div>
-			<div class="content">
+		<div class="container_column">
+			<div class="title">Девайсы дома</div>
+			<div class="list">
 				<div class="device">Свет</div>
 			</div>
-			
 		</div>
-		<div class="container_bin" id="devices">
+		<div class="container_column">
 			<div class="title">Все девайсы</div>
-			<div class="content">
-				<div class="device" id="1">Дверь</div>
-				<div class="device" id="1">Окно</div>
-				<div class="device" id="1">Термостат</div>
+			<div class="list">
+				<div class="device">Дверь</div>
+				<div class="device">Окно</div>
+				<div class="device">Термостат</div>
 			</div>
 		</div>
 	</div>
